--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3777,6 +3777,7 @@ input[type="button"].btn-block {
   -ms-flex-direction: column;
   flex-direction: column;
   min-width: 0;
+  max-width: 245px;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
@@ -3796,7 +3797,8 @@ input[type="button"].btn-block {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1.25rem; }
+  padding: 1.25rem; 
+}
 
 .card-title {
   margin-bottom: 0.75rem; }
