--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,6 +13,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -75,7 +79,34 @@
                                         <div class="text-center">
                                             <h5 class="fw-bolder">{{ merchant.shop_name }}</h5>
                                             <p>{{ merchant.username }}</p>
+                                            {% for product in merchant.products%}
+                                            {%if product.visible == True %}
+                                            <div>
+                                                <h6>{{product.name}}</h6>
+                                                <p>Preço: {{product.price}}</p>
+                                                <p>Desconto: {{product.discount}}</p>
+                                                <p>{{product.path}}</p>
+                                                <a href="#" class="get-discount" data-toggle="modal" data-target="#qrModal" data-qrcode="data:image/png;base64,{{ product.path }}">Get Discount</a>
+                                            </div>
+                                            {% endif %}
+                                            {% endfor %}
                                         </div>
+                                        <!-- Modal -->
+<div class="modal fade" id="qrModal" tabindex="-1" role="dialog" aria-labelledby="qrModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="qrModalLabel">QR Code</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img id="qrImage" src="" alt="QR Code">
+            </div>
+        </div>
+    </div>
+</div>
                                     </div>
                                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                         <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
@@ -124,5 +155,13 @@
     <!-- Core theme JS-->
     <script src="{{url_for('static', filename='js/main.js')}}"></script>
 </body>
-
+<script>
+    $(document).ready(function() {
+        $('.get-discount').click(function() {
+            var qrCodeData = $(this).data('qrcode');
+            $('#qrImage').attr('src', qrCodeData);
+            $('#qrModal').modal('show');
+        });
+    });
+</script>
 </html>
