Subindo as duas páginas Instituição social e Perfil

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3799,7 +3799,7 @@ input[type="button"].btn-block {
   flex: 1 1 auto;
   padding: 1.25rem; 
 }
-
+.card-mb
 .card-title {
   margin-bottom: 0.75rem; }
 
