--- a/templates/view_all_products.html
+++ b/templates/view_all_products.html
@@ -1,4 +1,4 @@
-<h2>All Products</h2>
+<h2>Todos os produtos</h2>
 <table>
     <thead>
         <tr>
@@ -16,7 +16,7 @@
             {% endfor %}
         {% else %}
             <tr>
-                <td colspan="2">No products available</td>
+                <td colspan="2">Nenhum produto disponível</td>
             </tr>
         {% endif %}
     </tbody>
