--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="Daniel Mendes" />
-    <title>Shop Homepage - Start Bootstrap Template</title>
+    <title>VivaBairro</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -22,7 +22,7 @@
 <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">VivaBairro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Instituições Sociais</a>
+                    <a class="nav-link" href="{{url_for('charity')}}">Instituições Sociais</a>
                 </li>
             </ul>
             <ul class="navbar-nav my-2 my-sm-0">
@@ -85,7 +85,7 @@
                                                 <h6>{{product.name}}</h6>
                                                 <p>Preço: {{product.price}}</p>
                                                 <p>Desconto: {{product.discount}}</p>
-                                                <a href="#" class="get-discount" data-toggle="modal" data-target="#qrModal" data-qrcode="data:image/png;base64,{{ product.path }}">Get Discount</a>
+                                                <a href="#" class="get-discount" data-toggle="modal" data-target="#qrModal" data-qrcode="{{ url_for('static', filename='QR{}.png'.format(product.merchant_id)) }}">Gerar Desconto</a>
                                             </div>
                                             {% endif %}
                                             {% endfor %}
@@ -101,7 +101,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <img id="qrImage" src="../static/QR7.png" alt="QR Code">
+                <img id="qrImage" src="" alt="QR Code">
             </div>
         </div>
     </div>
