--- a/templates/instituicoessociais.html
+++ b/templates/instituicoessociais.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">VivaBairro</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item"><a class="nav-link " aria-current="page" href="{{ url_for('homepage') }}">Inicio</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="{{url_for('dashboard')}}">Inicio</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">Parceiros</a>
@@ -42,15 +42,15 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="{{ url_for('instituicoes_sociais') }}">Instituições Sociais</a>
+                    <a class="nav-link" href="{{url_for('charity')}}">Instituições Sociais</a>
                 </li>
             </ul>
             <ul class="navbar-nav my-2 my-sm-0">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('profile', username=username) }}">{{ username }}</a>
+                    <a class="nav-link" href="{{url_for('profile', username=username)}}">{{username}}</a>
                 </li>
             </ul>
-            <button class="btn my-2 my-sm-0" type="submit"><a href="{{ url_for('logout') }}">Sair</a></button>
+            <button class="btn my-2 my-sm-0" type="submit"><a href="{{url_for('logout')}}">Sair</a></button>
         </div>
     </nav>
     <!-- Header-->
@@ -71,8 +71,11 @@
                         <div class="card h-100">
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <h5 class="fw-bolder">{{ instituicao.nome }}</h5>
-                                    <p>{{ instituicao.descricao }}</p>
+                                    <h5 class="fw-bolder">{{ instituicao.username }}</h5>
+                                    <p>{{ instituicao.username }}</p>
+                                    <p>{{ instituicao.atuacao }}</p>
+                                    <p>{{ instituicao.bairro }}</p>
+                                    <p>{{ instituicao.bairro }}</p>
                                 </div>
                             </div>
                         </div>
